Fix keyboard color being unreadable

--- a/frontend/src/app/design/organisms/formly-datepicker-field/formly-datepicker-field.component.scss
+++ b/frontend/src/app/design/organisms/formly-datepicker-field/formly-datepicker-field.component.scss
@@ -4,6 +4,8 @@
   flex-wrap: wrap;
   align-items: stretch;
   width: 100%;
+  --bs-tertiary-bg: var(--bs-primary-bg);
+  --bs-black: var(--bs-white);
 }
 
 .disabled {
